# cgal-alpha-wrapping

./: .gitignore  README.md  build.py  pyproject.toml
.github/workflows/: build-wheels.yml
cgal_alpha_wrapping/: __init__.py  _cgal_alpha_wrapping.pyx  cgal_alpha_wrapping_cpp.h
