[project]
name = "cgal-alpha-wrapping"
description = "cgal-alpha-wrapping"
authors = [
    {name = "sth-v",email = "sthv.developer@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0.2"

]
license = "GNU GENERAL PUBLIC LICENSE Version 3"
dynamic = ["version"]


[tool.poetry]
version = "0.0.0"  # placeholder, will be overridden
[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[build-system]
requires = ["poetry-core>=2.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0", "cython>=3.1", "numpy", "setuptools", "pyMSVC;sys_platform=='win32'"]
build-backend = "poetry_dynamic_versioning.backend"


[tool.poetry-dynamic-versioning]
enable = true
vcs    = "git"



[tool.poetry.build]
generate-setup-file = false
script = 'build.py'
