[project]
name = "cgal-alpha-wrapping"
description = "cgal-alpha-wrapping"
version = "1.0.1"
authors = [
    {name = "sth-v",email = "sthv.developer@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0.2"

]



[build-system]
requires = ["poetry-core>=2.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0", "cython>=3.1", "numpy", "setuptools", "pyMSVC;sys_platform=='win32'"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cgal-alpha-wrapping"

description = ""
authors = ["sth-v <sthv.developer@gmail.com>"]


[tool.poetry.build]
generate-setup-file = false
script = 'build.py'
