[project]
name = "cgal-alpha-wrapping"
description = "cgal-alpha-wrapping"
version = "1.0.3"
authors = [
    {name = "sth-v",email = "sthv.developer@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0.2"

]



[build-system]
requires = ["poetry-core>=2.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0", "cython>=3.1", "numpy", "setuptools", "pyMSVC;sys_platform=='win32'"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "cgal_alpha_wrapping"}]
include = [
    {path = "cgal_alpha_wrapping/*.pyd", format = "wheel"},
    {path = "cgal_alpha_wrapping/*.so", format = "wheel"},
    {path = "cgal_alpha_wrapping/*.dll", format = "wheel"}
]


[tool.poetry.build]
generate-setup-file = false
script = 'build.py'
